# game-speak

./: .gitignore  CMakeLists.txt  README.md
include/: asmOpenCV.h
src/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui
